# Crawler

./: .gitignore  Add_More_Source_plan.md  BatchCrawl_Plan.md  CMakeLists.txt  Fetch_More_from_Zhipin_plan.md  IMPLEMENTATION_SUMMARY.md  Instruction_for_Batch_crawl.md  Issues.md  PHD.txt  Plan_For_Crawler_Window.md  README.md  Sep_Parser_Plan.md  config.json  example.json  handle_wage_plan.md  main.cpp  overall_assess.md  requirements.txt  sqlinterface.cpp  sqlinterface.h
ai/: brain.py  main.py
ai/config/: auth.py  init.py  settings.py
ai/config/outsource/: app.py
ai/gui/: login_frame.py  monitor_frame.py
ai/tools/: generator.py  logger.py  push_manager.py  text_store.py  vector_store.py
ai/web/: app.py  controller.py
config/: config_manager.cpp  config_manager.h
constants/: db_types.h  network_types.h
cppGUI/: chatwindow.cpp  chatwindow.h  configwindow.cpp  configwindow.h  crawlerwindow.cpp  crawlerwindow.h  crawlprogresswindow.cpp  crawlprogresswindow.h  launcherwindow.cpp  launcherwindow.h
data/: conversation_history.txt
data/vector_index/: index.json
db/: sqlinterface.cpp  sqlinterface.h
documentations/: ai_module.md  database_module.md  network_api.md  network_module.md  presenter_module.md  tasks_module.md  webview2_request_capture_plan.md
documentations/algorithm/: anti-anti-crawl-algorithm.md  rag.md
documentations/network_module-details/: boss.md  chinahr.md  liepin.md  nowcode.md  wuyi.md
maintenance/: email_alert.cpp  email_alert.h  logger.cpp  logger.h
network/: cookie_fetcher.cpp  cookie_fetcher.h  crawl_chinahr.cpp  crawl_chinahr.h  crawl_liepin.cpp  crawl_liepin.h  crawl_nowcode.cpp  crawl_nowcode.h  crawl_wuyi.cpp  crawl_wuyi.h  crawl_zhipin.cpp  crawl_zhipin.h  job_crawler.cpp  job_crawler.h  job_crawler_main.cpp  job_crawler_network.cpp  job_crawler_parser.cpp  job_crawler_printer.cpp  job_crawler_utils.cpp  webview2_browser_wrl.cpp  webview2_browser_wrl.h
presenter/: presenter.h  presenter_main.cpp  presenter_mask.cpp  presenter_sort.cpp  presenter_utils.cpp
tasks/: ai_transfer_task.cpp  ai_transfer_task.h  backend_manager_task.cpp  backend_manager_task.h  crawler_task.cpp  crawler_task.h  internet_task.cpp  internet_task.h  presenter_task.cpp  presenter_task.h  sql_task.cpp  sql_task.h  sqltask.cpp  sqltask.h
test/: test.h  test_batch_crawl.cpp  test_cookie_fetcher.cpp  test_crawler_task.cpp  test_internet_task.cpp  test_job_crawler.cpp  test_presenter_task.cpp  test_sql.cpp  test_sql_task.cpp  test_webview2_cookie_wrl.cpp
